fix: Stretch drop widget to full width

--- a/django_attachments/static/django_attachments/css/attachments.css
+++ b/django_attachments/static/django_attachments/css/attachments.css
@@ -7,6 +7,7 @@
 	font-family: sans-serif;
 	font-size: 16px;
 	clear: both;
+	flex: 1 1 auto;
 }
 
 .attachments-widget.dz-clickable.empty {
